# HIRAXmcmc

./: .env.example  .gitignore  MANIFEST.in  README.md  main.py  pyproject.toml  requirements.txt  setup.py  setup_venv.sh
hiraxmcmc/core/: chi2function.py  hiraxoutput.py  planck_likelihood.py  planck_lite_py.py  powerspectrum.py
hiraxmcmc/core/output/: base_2018_plikHM_TTTEEE_lowl_lowE_lensing_parameters.ini
hiraxmcmc/inputfiles/: input_example.json  input_example_cosmo.json  input_example_cosmo_local.json  input_example_fcdep.json  input_example_local.json
hiraxmcmc/inputfiles/mcmc_output_input_example_fcdep/: input.json
hiraxmcmc/mmoderesults/base_400_500_cst_survey_center/: klt_params.yaml  prod_params.yaml  prod_sub.sh  psestpart_sub0.sh  psestpart_sub3.sh
hiraxmcmc/mmoderesults/base_400_500_gaussian_survey_center/: klt_params.yaml  prod_params.yaml  prod_sub.sh  psestpart_sub0.sh  psestpart_sub1.sh  psestpart_sub2.sh  psestpart_sub3.sh
hiraxmcmc/mmoderesults/base_500_600_cst_survey_center/: klt_params.yaml  prod_params.yaml  prod_sub.sh  psestpart_sub0.sh  psestpart_sub1.sh  psestpart_sub2.sh  psestpart_sub3.sh
hiraxmcmc/mmoderesults/base_500_600_gaussian_survey_center/: debug_testsub.sh  klt_params.yaml  prod_params.yaml  prod_sub.sh  psestpart_sub0.sh  psestpart_sub1.sh  psestpart_sub2.sh  psestpart_sub3.sh  testsub.sh
hiraxmcmc/mmoderesults/base_600_700_cst_survey_center/: klt_params.yaml  prod_params.yaml  prod_sub.sh  psestpart_sub0.sh  psestpart_sub1.sh  psestpart_sub2.sh
hiraxmcmc/mmoderesults/base_600_700_gaussian_survey_center/: klt_params.yaml  prod_params.yaml  prod_sub.sh  psestpart_sub0.sh  psestpart_sub1.sh  psestpart_sub2.sh  psestpart_sub3.sh
hiraxmcmc/mmoderesults/base_700_800_cst_survey_center/: klt_params.yaml  prod_params.yaml  prod_sub.sh  psestpart_sub0.sh  psestpart_sub1.sh  psestpart_sub2.sh
hiraxmcmc/mmoderesults/base_700_800_gaussian_survey_center/: klt_params.yaml  prod_params.yaml  prod_sub.sh  psestpart_sub0.sh  psestpart_sub1.sh  psestpart_sub2.sh  psestpart_sub3.sh
hiraxmcmc/mmoderesults/run_j_gauss_400_500_20220407_ns20000_multiKL/: pipe1_gen_vis.yaml  pipe2_extract_ps_fid.yaml  prod_params.yaml  ps_params.yaml
hiraxmcmc/scripts/: mcmc.py
hiraxmcmc/util/: basicfunctions.py  chains.py  cosmoparamvalues.py  directorymanagement.py  loadpreviousresults.py  thetacovupdate.py
tests/: test_basicfunctions.py  test_pf.py
(+2071 files in other folders)
