[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hiraxmcmc"
version = "1.0.0"
description = "MCMC pipeline for parameter estimation from 21cm PS in HIRAX m-mode simulations"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Viraj Nistane" },
]
license = { text = "MIT" }
dependencies = [
    "numpy",
    "scipy",
    "cython",
    "h5py",
    "camb",
    "classy",
    "configobj",
    "pygit2",
    "mpi4py",
    "zarr",
    "pyyaml",
]

[dependency-groups]
dev = [
    "build",
    "pytest",
    "twine",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["hiraxmcmc", "hiraxmcmc.*"]
